--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   neo4j:
-    image: bitnami/neo4j:latest
+    image: neo4j:latest
     networks:
       - neo4j-network
     ports:
@@ -19,3 +19,4 @@ services:
       - NEO4J_dbms.memory.heap.initial_size=1G
       - NEO4J_dbms_memory_heap_max__size=1G
       - NEO4J_dbms_default__database=neo4jDB
+      - NEO4J_AUTH=neo4j/covid19
