update: requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-googlemaps
-networkx
-telebot
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+decorator==4.4.2
+googlemaps==4.4.1
 idna==2.9
-pyTelegramBotAPI==3.6.7
-requests==2.23.0
-six==1.14.0
-urllib3==1.25.8
-neo4j-driver==1.7.1
-python-dotenv~=0.13.0
-neomodel~=3.3.2
+neo4j-driver==1.7.2
+neobolt==1.7.17
+neomodel==3.3.2
+neotime==1.7.4
+networkx==2.4
+prompt-toolkit==2.0.7
 py2neo==5.0b1
+Pygments==2.3.1
+pyTelegramBotAPI==3.7.1
+python-dotenv==0.13.0
+pytz==2020.1
+requests==2.23.0
+six==1.15.0
+urllib3==1.25.9
+wcwidth==0.2.2
